# SketchDDD

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
crates/sketchddd/: Cargo.toml  README.md
crates/sketchddd-cli/: Cargo.toml
crates/sketchddd-cli/src/: main.rs
crates/sketchddd-codegen/: Cargo.toml
crates/sketchddd-codegen/src/: clojure.rs  haskell.rs  kotlin.rs  lib.rs  rust.rs  typescript.rs
crates/sketchddd-core/: Cargo.toml
crates/sketchddd-core/src/: context.rs  diagnostics.rs  lib.rs  mapping.rs  validation.rs
crates/sketchddd-lsp/: Cargo.toml
crates/sketchddd-lsp/src/: backend.rs  (+2 more)
crates/sketchddd-parser/: Cargo.toml
crates/sketchddd-parser/src/: ast.rs  error.rs  grammar.pest  grammar.rs  lib.rs  pretty.rs  transform.rs
crates/sketchddd-viz/: Cargo.toml
crates/sketchddd-viz/src/: graphviz.rs  lib.rs  mermaid.rs
crates/sketchddd-wasm/: Cargo.toml
crates/sketchddd/src/: lib.rs
docs/adr/: 0000-adr-template.md  0001-use-category-theory-as-foundation.md  0002-rust-for-core-engine.md  0003-dual-interface-visual-and-text.md  0004-visual-builder-frontend-framework.md  0005-validation-error-code-conventions.md  0007-file-extension-convention.md  0008-code-generation-architecture.md  0009-rich-error-messages.md  0010-wasm-api-design.md  0011-state-management-strategy.md  0012-template-format-specification.md  README.md
docs/reference/: file-extension.md
examples/: blog.sddd  ecommerce.sddd  microservices.sddd  minimal.sddd
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
(+41 files in other folders)
