[package]
name = "sketchddd-parser"
description = "DSL parser for SketchDDD domain models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sketchddd-core = { version = "0.1.0", path = "../sketchddd-core" }
pest = { workspace = true }
pest_derive = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
