[package]
name = "sketchddd-viz"
description = "Visualization generation for SketchDDD domain models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sketchddd-core = { version = "0.1.0", path = "../sketchddd-core" }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
